--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 fastapi
-uvicorn[standard]
-sqlalchemy
-pydantic>=2
+uvicorn
+pydantic
+alembic
+psycopg2-binary
+python-jose[cryptography]
 python-multipart
-pandas
-numpy
-scikit-learn
-joblib
-reportlab
-tensorflow
+python-dotenv
+pydantic-settings
+email-validator
+passlib==1.7.4
+bcrypt==3.2.2
+sqlalchemy
