--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "axios": "^1.7.2",
     "i18next": "^23.11.4",
+    "leaflet": "^1.9.4",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^5.0.4",
