--- a/backend.env
+++ b/backend.env
@@ -4,5 +4,5 @@ JWT_ALG=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # Optional: admin credentials for seed_admin
-ADMIN_EMAIL=admin@municipality.gov.lb
+ADMIN_EMAIL=admin@edl.gov.lb
 ADMIN_PASSWORD=Admin123!
